# avx

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  main.cpp  mmth.hpp
